# amplifier-app-log-viewer

./: QUICK_START.md  README.md  pyproject.toml
amplifier_app_log_viewer/: __init__.py  __main__.py  cli.py  log_reader.py  server.py  session_scanner.py
amplifier_app_log_viewer/service/: __init__.py  base.py  launchd.py  systemd.py
amplifier_app_log_viewer/static/: app.js  style.css  tokens.css
amplifier_app_log_viewer/static/js/json-viewer/: json-viewer.css  json-viewer.js
amplifier_app_log_viewer/templates/: index.html
tests/: __init__.py  test_log_reader.py  test_server.py  test_session_scanner.py
